верстка главной страницы, первая версия

--- a/index.html
+++ b/index.html
@@ -1,12 +1,102 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <h1 class="visually-hidden">Туристический город Седона в штате Аризона</h1>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+      <section class="hero">
+        <!--Вставить сюда текст из svg? Например как alt контентной картинки? "Welcome to the ..."-->
+        <h2>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <!--Они так логически связаны со следующим блоком по смыслу, а это же разные блоки, да?-->
+      </section>
 
+      <section class="features">
+        <h2 class="visually-hidden">Особенности Седоны</h2>
+        <ul>
+          <li>
+            <h3>Настоящий городок</h3>
+            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li>
+            <h3>Небольшая площадь</h3>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li>
+            <h3>Красивая дорога</h3>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li>
+            <h3>Мало туристов</h3>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li>
+            <h3>Там есть мост дьявола</h3>
+            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li>
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li>
+            <h3>Еда</h3>
+            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li>
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="search">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <!--Добавить upcase кнопке-->
+        <button type="">Поиск гостиницы в Седоне</button>
+      </section>
+
+      <section class="subscribe">
+        <!--Это форма или просто кнопка?-->
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+        <input type="email" placeholder="Ваш e-mail">
+        <button type="button">Подписаться</button>
+      </section>
+    </main>
+    <footer>
+      <address>
+        <div class="social">
+          <ul>
+            <li><a href="#">ВКонтакте</a></li>
+            <li><a href="#">Telegram</a></li>
+            <li><a href="#">YouTube</a></li>
+          </ul>
+        </div>
+        <div class="phone">
+          <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+        </div>
+        <div class="logo">
+          <a href="#">HtmlAcademy</a>
+        </div>
+      </address>
+    </footer>
   </body>
+
 </html>
+
+<!--
+  <img src="#" alt="Описание картинки.">
+  class="visually-hidden"
+  <a href="catalog.html"> или <a href="#"></a>
+  Для тестирования правильности работы форм можно использовать адрес https://echo.htmlacademy.ru/
+-->
