дописала навигацию в главной странице

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 
   <body>
     <header>
-      <nav></nav>
+      <nav class="main-nav">
+        <div class="main-logo"><a><img src="#" alt="Логотип Седоны"></a></div>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">О седоне</a></li>
+          <li><a href="#">Гостиницы</a></li>
+        </ul>
+        <div class="main-menu">
+          <button class="search">Поиск</button>
+          <button class="favorite">Избранное</button>
+          <button class="book">Хочу сюда!</button>
+        </div>
+      </nav>
     </header>
     <main>
       <h1 class="visually-hidden">Туристический город Седона в штате Аризона</h1>
@@ -62,7 +74,7 @@
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <!--Добавить upcase кнопке-->
-        <button type="">Поиск гостиницы в Седоне</button>
+        <button type="button">Поиск гостиницы в Седоне</button>
       </section>
 
       <section class="subscribe">
