сделала ссылки на страницы

--- a/catalog.html
+++ b/catalog.html
@@ -9,11 +9,11 @@
   <body>
     <header>
       <nav class="main-nav">
-        <div class="main-logo"><a><img src="#" alt="Логотип Седоны"></a></div>
+        <div class="main-logo"><a><img src="/" alt="Логотип Седоны"></a></div>
         <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">О седоне</a></li>
-          <li><a href="#">Гостиницы</a></li>
+          <li><a href="/">Главная</a></li>
+          <li><a href="/">О седоне</a></li>
+          <li><a>Гостиницы</a></li>
         </ul>
         <div class="main-menu">
           <button class="search">Поиск</button>
@@ -58,6 +58,7 @@
         <button type="reset">Сбросить</button>
       </section>
 
+      <!--TODO: Тут недоделала, устала. Перерыв, не забудь-->
       <section class="filter">
         <h2 class="visually-hidden">Результаты поиска</h2>
         <nav></nav>
