--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <header>
       <nav class="main-nav">
-        <div class="main-logo"><a><img src="#" alt="Логотип Седоны"></a></div>
+        <div class="main-logo"><a><img src="" alt="Логотип Седоны"></a></div>
         <ul>
-          <li><a href="#">Главная</a></li>
+          <li><a>Главная</a></li>
           <li><a href="#">О седоне</a></li>
-          <li><a href="#">Гостиницы</a></li>
+          <li><a href="/catalog.html">Гостиницы</a></li>
         </ul>
         <div class="main-menu">
           <button class="search">Поиск</button>
