--- a/catalog.html
+++ b/catalog.html
@@ -9,86 +9,125 @@
   <body>
     <header>
       <nav class="main-nav">
-        <div class="main-logo"><a><img src="/" alt="Логотип Седоны"></a></div>
-        <ul>
-          <li><a href="/">Главная</a></li>
-          <li><a href="/">О седоне</a></li>
-          <li><a>Гостиницы</a></li>
-        </ul>
+        <a class="main-logo"><img src="#" alt="Логотип Седоны"></a>
+
         <div class="main-menu">
-          <button class="search">Поиск</button>
-          <button class="favorite">Избранное</button>
-          <button class="book">Хочу сюда!</button>
+          <a href="index.html">Главная</a>
+          <a href="#">О седоне</a>
+          <a>Гостиницы</a>
+          <button class="search" type="button">Поиск</button>
+          <button class="favorite" type="button">Избранное</button>
+          <button class="book" type="button">Хо чу сюда!</button>
         </div>
       </nav>
     </header>
+
     <main>
       <h1>Гостиницы Седоны</h1>
       <section class="options">
         <h2 class="visually-hidden">Параметры поиска гостиниц</h2>
         <div class="breadcrumbs">
-          <!--А тут как оформлять "хлебные крошки"?-->
+          <a href="index.html"><img src="#" alt="Главная страница"></a>
+          <a>Гостиницы</a>
         </div>
-        <div class="infrastructure">
-          <p>Инфраструктура:</p>
-          <ul>
-            <li><input type="checkbox" name="pool" id="pool"><label for="pool">Бассейн</label></li>
-            <li><input type="checkbox" name="parking" id="parking"><label for="parking">Парковка</label></li>
-            <li><input type="checkbox" name="wi-fi" id="wi-fi"><label for="wi-fi">Wi-Fi</label></li>
-          </ul>
-        </div>
-        <div class="housing-type">
-          <p>Тип жилья:</p>
-          <ul>
-            <li><input type="radio" name="hotel" id="hote"><label for="hotel">Гостиница</label></li>
-            <li><input type="radio" name="motel" id="motel"><label for="motel">Мотель</label></li>
-            <li><input type="radio" name="apartments" id="apartments"><label for="apartments">Апартаменты</label></li>
-          </ul>
-        </div>
-        <div class="price">
-          <p>Стоимость, ₽:</p>
-          <!--Как сделать слайдер с двумя точками?-->
-          <!--А еще текст добавить, отложила-->
-          <input type="number">
-          <input type="number">
-          <input type="range">
-          <input type="range">
-        </div>
-        <button type="submit">Применить</button>
-        <button type="reset">Сбросить</button>
+
+        <form>
+          <div class="infrastructure">
+            <p>Инфраструктура:</p>
+            <input type="checkbox" name="pool" id="pool"><label for="pool">Бассейн</label>
+            <input type="checkbox" name="parking" id="parking"><label for="parking">Парковка</label>
+            <input type="checkbox" name="wi-fi" id="wi-fi"><label for="wi-fi">Wi-Fi</label>
+          </div>
+          <div class="housing-type">
+            <p>Тип жилья:</p>
+            <input type="radio" name="type-of-housing" value="hotel" id="hotel"><label for="hotel">Гостиница</label>
+            <input type="radio" name="type-of-housing" value="motel" id="motel"><label for="motel">Мотель</label>
+            <input type="radio" name="type-of-housing" value="apartments" id="apartments"><label
+              for="apartments">Апартаменты</label>
+          </div>
+          <div class="price">
+            <p>Стоимость, &#8381;:</p>
+            <input type="number">
+            <label for="">от</label>
+            <input type="number">
+            <label for="">до</label>
+            <!--<input type="range">-->
+          </div>
+          <button type="submit">Применить</button>
+          <button type="reset">Сбросить</button>
+        </form>
       </section>
 
-      <!--TODO: Тут недоделала, устала. Перерыв, не забудь-->
       <section class="filter">
-        <h2 class="visually-hidden">Результаты поиска</h2>
-        <nav></nav>
-        <ul></ul>
+        <h2>Найдено гостиниц: 38</h2>
+        <nav>
+          <div class="dropdown">Сначала дешевые</div>
+          <button class="view-format cards"><img src="#" alt="Карточки"></button>
+          <button class="view-format fullscreen"><img src="#" alt="Полный экран"></button>
+          <button class="view-format list"><img src="#" alt="Список"></button>
+        </nav>
+        <section>
+          <section class="card">
+            <img src="#" alt="Amara Resort & Spa">
+            <h3>Amara Resort & Spa</h3>
+            <p class="type">Гостиница</p>
+            <p class="price">От 4000 &#8381;</p>
+            <a href="#" class="detail">Подробнее</a>
+            <button class="favorite">В избранное</button>
+            <div class="rating" data-rating="8.5">Рейтинг: 8,5</div>
+          </section>
+          <section class="card">
+            <img src="#" alt="Villas at Poco Diablo">
+            <h3>Villas at Poco Diablo</h3>
+            <p class="type">Гостиница</p>
+            <p class="price">От 5000 &#8381;</p>
+            <a href="#" class="detail">Подробнее</a>
+            <button class="favorite on-favorite">В избранном</button>
+            <div class="rating" data-rating="9.2">Рейтинг: 9,2</div>
+          </section>
+          <section class="card">
+            <img src="#" alt="Desert Quail Inn">
+            <h3>Desert Quail Inn</h3>
+            <p class="type">Гостиница</p>
+            <p class="price">От 2500 &#8381;</p>
+            <a href="#" class="detail">Подробнее</a>
+            <button class="favorite">В избранное</button>
+            <div class="rating" data-rating="6.9">Рейтинг: 6,9</div>
+          </section>
+          <section class="card">
+            <img src="#" alt="GreenTree Inn">
+            <h3>GreenTree Inn</h3>
+            <p class="type">Гостиница</p>
+            <p class="price">От 1500 &#8381;</p>
+            <a href="#" class="detail">Подробнее</a>
+            <button class="favorite">В избранное</button>
+            <div class="rating" data-rating="5.0">Рейтинг: 5,0</div>
+          </section>
+        </section>
+        <div class="pagination">
+          <a class="current">1</a>
+          <a href="#">2</a>
+          <a href="#">3</a>
+          <a href="#">4</a>
+          <a class="collapsed">...</a>
+          <a href="#">10</a>
+        </div>
       </section>
+    </main>
 
-      <section class="subscribe">
-        <!--Это форма или просто кнопка?-->
+    <footer>
+      <form class="subscribe">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <input type="email" placeholder="Ваш e-mail">
-        <button type="button">Подписаться</button>
-      </section>
-    </main>
-    <footer>
-      <address>
-        <div class="social">
-          <ul>
-            <li><a href="#">ВКонтакте</a></li>
-            <li><a href="#">Telegram</a></li>
-            <li><a href="#">YouTube</a></li>
-          </ul>
-        </div>
-        <div class="phone">
-          <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
-        </div>
-        <div class="logo">
-          <a href="#">HtmlAcademy</a>
-        </div>
-      </address>
+        <button type="submit">Подписаться</button>
+      </form>
+
+      <a class="social vk" href="#">ВКонтакте</a>
+      <a class="social telegram" href="#">Telegram</a>
+      <a class="social youtube" href="#">YouTube</a>
+      <a class="phone" href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+      <a class="logo" href="#">HtmlAcademy</a>
     </footer>
   </body>
 
