исправила ошибки, показанные валидатором

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1 class="visually-hidden">Туристический город Седона в штате Аризона</h1>
 
       <section class="hero">
-        <h2>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
+        <h2>Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
@@ -82,7 +82,7 @@
     </main>
 
     <footer>
-      <form class="subscribe">
+      <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <input type="email" placeholder="Ваш e-mail">
@@ -92,7 +92,7 @@
       <a class="social vk" href="#">ВКонтакте</a>
       <a class="social telegram" href="#">Telegram</a>
       <a class="social youtube" href="#">YouTube</a>
-      <a class="phone" href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+      <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="logo" href="#">HtmlAcademy</a>
     </footer>
   </body>
