--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="catalog.html">Гостиницы</a>
         <button class="search" type="button">Поиск</button>
         <button class="favorite" type="button">Избранное</button>
-        <button class="book" type="button">Хо чу сюда!</button>
+        <button class="book" type="button">Хочу сюда!</button>
       </nav>
     </header>
 
@@ -85,7 +85,7 @@
       <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
-        <input type="email" placeholder="Ваш e-mail">
+        <input type="email" name="email" placeholder="Ваш e-mail" required>
         <button type="submit">Подписаться</button>
       </form>
 
