--- a/2/catalog.html
+++ b/2/catalog.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
     <base href="https://htmlacademy-htmlcss.github.io/1314187-sedona-35/2/">
 </head>
 
@@ -34,19 +35,19 @@
 
         <form action="https://echo.htmlacademy.ru/" method="post">
           <div class="infrastructure">
-            <p>Инфраструктура:</p>
+            <h4>Инфраструктура:</h4>
             <label><input type="checkbox" name="pool">Бассейн</label>
             <label><input type="checkbox" name="parking">Парковка</label>
             <label><input type="checkbox" name="wi-fi">Wi-Fi</label>
           </div>
           <div class="housing-type">
-            <p>Тип жилья:</p>
+            <h4>Тип жилья:</h4>
             <label><input type="radio" name="type-of-housing" value="hotel" checked>Гостиница</label>
             <label><input type="radio" name="type-of-housing" value="motel">Мотель</label>
             <label><input type="radio" name="type-of-housing" value="apartments">Апартаменты</label>
           </div>
           <div class="price">
-            <p>Стоимость, &#8381;:</p>
+            <h4>Стоимость, &#8381;:</h4>
             <label><input type="number" name="from" value="0" min="0" max="11500" step="1">от</label>
             <label><input type="number" name="to" value="9000" min="0" max="11500" step="1">до</label>
           </div>
@@ -58,7 +59,6 @@
       <section class="filter">
         <h2>Найдено гостиниц: 38</h2>
         <nav>
-          <h3 class="visually-hidden">Настройка отображения результатов</h3>
           <select>
             <option label="По популярности" value="popular">
             <option label="Сначала дешевые" value="cheap">
@@ -70,10 +70,9 @@
         </nav>
 
         <section>
-          <h3 class="visually-hidden">Результаты поиска</h3>
           <section class="card">
             <img src="images/hotel-1-Amara-Resort-Spa.jpg" width="300" height="212" alt="Amara Resort & Spa">
-            <h4>Amara Resort & Spa</h4>
+            <h3>Amara Resort & Spa</h3>
             <p class="type">Гостиница</p>
             <p class="price">От 4000 &#8381;</p>
             <a href="#" class="detail">Подробнее</a>
@@ -82,7 +81,7 @@
           </section>
           <section class="card">
             <img src="images/hotel-2-Villas-at-Poco-Diablo.jpg" width="300" height="212" alt="Villas at Poco Diablo">
-            <h4>Villas at Poco Diablo</h4>
+            <h3>Villas at Poco Diablo</h3>
             <p class="type">Гостиница</p>
             <p class="price">От 5000 &#8381;</p>
             <a href="#" class="detail">Подробнее</a>
@@ -91,7 +90,7 @@
           </section>
           <section class="card">
             <img src="images/hotel-3-Desert-Quail-Inn.jpg" width="300" height="212" alt="Desert Quail Inn">
-            <h4>Desert Quail Inn</h4>
+            <h3>Desert Quail Inn</h3>
             <p class="type">Гостиница</p>
             <p class="price">От 2500 &#8381;</p>
             <a href="#" class="detail">Подробнее</a>
@@ -100,7 +99,7 @@
           </section>
           <section class="card">
             <img src="images/hotel-4-GreenTree-Inn.jpg" width="300" height="212" alt="GreenTree Inn">
-            <h4>GreenTree Inn</h4>
+            <h3>GreenTree Inn</h3>
             <p class="type">Гостиница</p>
             <p class="price">От 1500 &#8381;</p>
             <a href="#" class="detail">Подробнее</a>
@@ -122,7 +121,7 @@
     <footer>
       <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+        <p class="text-basic">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <input type="email" name="email" placeholder="Ваш e-mail" required>
         <button type="submit">Подписаться</button>
       </form>
