--- a/2/index.html
+++ b/2/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
     <base href="https://htmlacademy-htmlcss.github.io/1314187-sedona-35/2/">
 </head>
 
@@ -28,7 +29,7 @@
       <section class="hero">
         <img src="images/hero.png" width="1200" height="485" alt="Фото каньона в Седоне">
         <h2>Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <p class="text-basic">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
       <section class="features">
@@ -82,7 +83,8 @@
 
       <section class="search">
         <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="text-basic">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
+          Седоне</p>
         <button type="button">Поиск гостиницы в Седоне</button>
       </section>
     </main>
@@ -90,7 +92,7 @@
     <footer>
       <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+        <p class="text-basic">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <input type="email" name="email" placeholder="Ваш e-mail" required>
         <button type="submit">Подписаться</button>
       </form>
