--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,7 @@
             <h3>Amara Resort & Spa</h3>
             <p class="type">Гостиница</p>
             <p class="price">От 4000 &#8381;</p>
-            <a href="#" class="detail">Подробнее</a>
+            <button class="detail">Подробнее</button>
             <button class="favorite">В избранное</button>
             <div class="rating" data-rating="8.5">Рейтинг: 8,5</div>
           </section>
@@ -83,7 +83,7 @@
             <h3>Villas at Poco Diablo</h3>
             <p class="type">Гостиница</p>
             <p class="price">От 5000 &#8381;</p>
-            <a href="#" class="detail">Подробнее</a>
+            <button class="detail">Подробнее</button>
             <button class="favorite on-favorite">В избранном</button>
             <div class="rating" data-rating="9.2">Рейтинг: 9,2</div>
           </section>
@@ -92,7 +92,7 @@
             <h3>Desert Quail Inn</h3>
             <p class="type">Гостиница</p>
             <p class="price">От 2500 &#8381;</p>
-            <a href="#" class="detail">Подробнее</a>
+            <button class="detail">Подробнее</button>
             <button class="favorite">В избранное</button>
             <div class="rating" data-rating="6.9">Рейтинг: 6,9</div>
           </section>
@@ -101,18 +101,18 @@
             <h3>GreenTree Inn</h3>
             <p class="type">Гостиница</p>
             <p class="price">От 1500 &#8381;</p>
-            <a href="#" class="detail">Подробнее</a>
+            <button class="detail">Подробнее</button>
             <button class="favorite">В избранное</button>
             <div class="rating" data-rating="5.0">Рейтинг: 5,0</div>
           </section>
         </section>
         <div class="pagination">
-          <a class="current">1</a>
-          <a href="#">2</a>
-          <a href="#">3</a>
-          <a href="#">4</a>
-          <a class="collapsed">...</a>
-          <a href="#">10</a>
+          <button class="current">1</button>
+          <button href="#">2</button>
+          <button href="#">3</button>
+          <button href="#">4</button>
+          <div class="collapsed">...</div>
+          <button href="#">10</button>
         </div>
       </section>
     </main>
@@ -120,7 +120,7 @@
     <footer>
       <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
-        <p class="text-basic">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <input type="email" name="email" placeholder="Ваш e-mail" required>
         <button type="submit">Подписаться</button>
       </form>
