:heavy_check_mark: Сборка #2

--- a/2/index.html
+++ b/2/index.html
@@ -29,7 +29,7 @@
       <section class="hero">
         <img src="images/hero.png" width="1200" height="485" alt="Фото каньона в Седоне">
         <h2>Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
-        <p class="text-basic">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
       <section class="features">
@@ -83,7 +83,7 @@
 
       <section class="search">
         <h2>Заинтересовались?</h2>
-        <p class="text-basic">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
+        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
           Седоне</p>
         <button type="button">Поиск гостиницы в Седоне</button>
       </section>
@@ -92,7 +92,7 @@
     <footer>
       <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
-        <p class="text-basic">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <input type="email" name="email" placeholder="Ваш e-mail" required>
         <button type="submit">Подписаться</button>
       </form>
