--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
         </div>
 
-        <div class="features-list alone">
+        <div class="features-list alone reverse">
           <div>
             <h3>Там есть мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
