правки после ревью

--- a/catalog.html
+++ b/catalog.html
@@ -50,8 +50,9 @@
             <label><input type="number" name="from" value="0" min="0" max="11500" step="1">от</label>
             <label><input type="number" name="to" value="9000" min="0" max="11500" step="1">до</label>
           </div>
-          <button type="submit">Применить</button>
-          <button type="reset">Сбросить</button>
+          <!--Егор, прямо совсем убрать типы? Вообще совсем?-->
+          <button>Применить</button>
+          <button>Сбросить</button>
         </form>
       </section>
 
@@ -117,14 +118,14 @@
       </section>
     </main>
 
-    <footer>
-      <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
-        <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
-        <input type="email" name="email" placeholder="Ваш e-mail" required>
-        <button type="submit">Подписаться</button>
-      </form>
+    <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
+      <h2>Подпишитесь на рассылку</h2>
+      <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+      <input type="email" name="email" placeholder="Ваш e-mail" required>
+      <button type="submit">Подписаться</button>
+    </form>
 
+    <footer>
       <a class="social vk" href="#">ВКонтакте</a>
       <a class="social telegram" href="#">Telegram</a>
       <a class="social youtube" href="#">YouTube</a>
