добавила ссылку на modal-window в основное меню, чтобы его было удобно открывать для теста

--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
           <img src="images/logo-sedona-main.svg" width="140" height="70" alt="Логотип Седоны">
         </a>
         <a href="index.html">Главная</a>
-        <a href="#">О седоне</a>
+        <a href="modal-window.html">О седоне</a>
         <a>Гостиницы</a>
         <button class="search" type="button">Поиск</button>
         <button class="favorite" type="button">Избранное</button>
