:heavy_check_mark: Сборка #4

--- a/4/catalog.html
+++ b/4/catalog.html
@@ -58,8 +58,8 @@
         </form>
       </section>
 
-      <section class="filter">
-        <div class="filter-header">
+      <section class="result">
+        <div class="filter">
           <h2>Найдено гостиниц: 38</h2>
 
           <select>
