--- a/4/index.html
+++ b/4/index.html
@@ -89,9 +89,11 @@
 
       <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
-        <input type="email" name="email" placeholder="Ваш e-mail" required>
-        <button type="submit">Подписаться</button>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <div>
+          <input type="email" name="email" placeholder="Ваш e-mail" required>
+          <button type="submit">Подписаться</button>
+        </div>
       </form>
     </main>
 
