переставила стили местами, чтобы было понятнее

--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-      <section class="options">
+      <section class="filter">
         <h1>Гостиницы Седоны</h1>
         <h2 class="visually-hidden">Параметры поиска гостиниц</h2>
         <div class="breadcrumbs">
@@ -31,7 +31,7 @@
           <a>Гостиницы</a>
         </div>
 
-        <form class="set-options" action="https://echo.htmlacademy.ru/" method="post">
+        <form class="set-filter-options" action="https://echo.htmlacademy.ru/" method="post">
           <div class="infrastructure">
             <h3>Инфраструктура:</h3>
             <label><input type="checkbox" name="pool">Бассейн</label>
@@ -58,10 +58,10 @@
       </section>
 
       <section class="result">
-        <div class="filter">
+        <div class="view-options">
           <h2>Найдено гостиниц: 38</h2>
 
-          <select>
+          <select class="view-order">
             <option label="По популярности" value="popular">
             <option label="Сначала дешевые" value="cheap">
             <option label="Сначала дорогие" value="expensive">
