правки ревью + указала параметры фона в css

--- a/catalog.html
+++ b/catalog.html
@@ -44,7 +44,7 @@
             <label><input type="radio" name="type-of-housing" value="motel">Мотель</label>
             <label><input type="radio" name="type-of-housing" value="apartments">Апартаменты</label>
           </div>
-          <div class="price">
+          <div class="price-range">
             <h3>Стоимость, &#8381;:</h3>
             <label><input type="number" name="from" value="0" min="0" max="11500" step="1">от</label>
             <label><input type="number" name="to" value="9000" min="0" max="11500" step="1">до</label>
