pixel-perfect первой половины главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -13,12 +13,18 @@
         <a class="logo-sedona" href="index.html">
           <img src="images/logo-sedona-main.svg" width="140" height="70" alt="Логотип Седоны">
         </a>
-        <a href="index.html">Главная</a>
-        <a href="modal-window.html">О седоне</a>
-        <a>Гостиницы</a>
-        <button class="search-button" type="button"> <span class="visually-hidden">Поиск</span> </button>
-        <button class="favorite" type="button"> <span class="visually-hidden">Избранное</span> </button>
-        <button class="book" type="button">Хочу сюда!</button>
+
+        <div class="main-nav-left">
+          <a href="index.html">Главная</a>
+          <a href="modal-window.html">О седоне</a>
+          <a>Гостиницы</a>
+        </div>
+
+        <div class="main-nav-right">
+          <button class="search-button" type="button"> <span class="visually-hidden">Поиск</span> </button>
+          <button class="favorite" type="button"> <span class="visually-hidden">Избранное</span> </button>
+          <button class="book" type="button">Хочу сюда!</button>
+        </div>
       </nav>
     </header>
 
