--- a/index.html
+++ b/index.html
@@ -88,15 +88,14 @@
 
       <section class="search">
         <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
-          Седоне</p>
+        <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button type="button">Поиск гостиницы в Седоне</button>
       </section>
 
       <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <div>
+        <div class="input-group">
           <input type="email" name="email" placeholder="Ваш e-mail" required>
           <button type="submit">Подписаться</button>
         </div>
