--- a/6/modal-window.html
+++ b/6/modal-window.html
@@ -15,7 +15,8 @@
     <section class="modal-window">
       <form action="https://echo.htmlacademy.ru/" method="post">
         <h2>Поиск гостиницы в Седоне</h2>
-        <button class="close-modal-window" type="reset">Закрыть</button>
+        <button class="close-modal-window" type="reset"><span class="visually-hidden">Закрыть</span></button>
+        <div></div>
         <h3>
           Дата заезда:
         </h3>
