валидатор, забыла убрать href

--- a/catalog.html
+++ b/catalog.html
@@ -122,11 +122,11 @@
         </section>
         <div class="pagination">
           <button class="current">1</button>
-          <button href="#">2</button>
-          <button href="#">3</button>
-          <button href="#">4</button>
-          <div class="collapsed">...</div>
-          <button href="#">10</button>
+          <button>2</button>
+          <button>3</button>
+          <button>4</button>
+          <button class="collapsed">...</button>
+          <button>10</button>
         </div>
       </section>
 
