--- a/6/index.html
+++ b/6/index.html
@@ -74,15 +74,15 @@
         <div class="features-list multiple with-icons">
           <div class="housing">
             <h3>Жильё</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <p>Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
           </div>
           <div class="food">
             <h3>Еда</h3>
-            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p>Всегда заказывайте <br>топовый фирменный бургер, вы не разочаруетесь!</p>
           </div>
           <div class="souvenirs">
             <h3>Сувениры</h3>
-            <p>Не только китайского, но и настоящего местного производства!</p>
+            <p>Не только китайского, <br>но и настоящего местного производства!</p>
           </div>
         </div>
       </section>
