настроено управление фокусом

--- a/catalog.html
+++ b/catalog.html
@@ -121,11 +121,11 @@
           </section>
         </section>
         <div class="pagination">
-          <button class="current">1</button>
+          <button class="current" disabled>1</button>
           <button>2</button>
           <button>3</button>
           <button>4</button>
-          <button class="collapsed">...</button>
+          <button class="collapsed" disabled>...</button>
           <button>10</button>
         </div>
       </section>
