--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
 
         <div class="main-nav-left">
           <a href="index.html">Главная</a>
-          <a href="modal-window.html">О седоне</a>
+          <a>О седоне</a>
           <a>Гостиницы</a>
         </div>
 
@@ -142,7 +142,7 @@
 
     <footer class="main-footer">
       <div class="social">
-        <a class="vk" href="#">
+        <a class="vk" href="https://vk.com/htmlacademy">
           <span class="visually-hidden">
             ВКонтакте
           </span>
@@ -152,7 +152,7 @@
               fill="#83B3D3" />
           </svg>
         </a>
-        <a class="telegram" href="#">
+        <a class="telegram" href="https://t.me/htmlacademy">
           <span class="visually-hidden">
             Telegram
           </span>
@@ -162,7 +162,7 @@
               fill="#83B3D3" />
           </svg>
         </a>
-        <a class="youtube" href="#">
+        <a class="youtube" href="https://www.youtube.com/user/htmlacademyru">
           <span class="visually-hidden">
             YouTube
           </span>
@@ -174,7 +174,7 @@
         </a>
       </div>
       <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="logo-htmlacademy" href="#">
+      <a class="logo-htmlacademy" href="https://htmlacademy.ru/">
         <img src="images/logo-htmlacademy.svg" width="115" height="33" alt="Логотип HtmlAcademy">
       </a>
     </footer>
