--- a/catalog.html
+++ b/catalog.html
@@ -178,6 +178,38 @@
         <img src="images/logo-htmlacademy.svg" width="115" height="33" alt="Логотип HtmlAcademy">
       </a>
     </footer>
+
+    <section class="modal-window">
+      <form action="https://echo.htmlacademy.ru/" method="post">
+        <h2>Поиск гостиницы в Седоне</h2>
+        <button class="close-modal-window" type="reset"><span class="visually-hidden">Закрыть</span></button>
+        <div></div>
+        <h3>
+          Дата заезда:
+        </h3>
+        <!--стилизовать как h4 (аналогично h3 в фильтрации гостиниц)-->
+        <input type="date">
+        <span class="error">Мы не можем отправить вас в прошлое.</span>
+        <h3>
+          Дата выезда:
+        </h3>
+        <input type="date">
+        <span class="verification">На эти даты есть свободные номера. Пока есть.</span>
+        <h3>
+          Взрослые:
+        </h3>
+        <input type="number" min="0" max="5" value="2">
+        <h3>
+          Дети:
+        </h3>
+        <span class="info">Подробнее...</span>
+        <span class="tooltip">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6
+          лет размещаются бесплатно.</span>
+        <input type="number" min="0" max="5" value="0">
+        <button class="find-modal-window" type="submit">Найти</button>
+      </form>
+      <script defer src="scripts/modal-window.js"></script>
+    </section>
   </body>
 
 </html>
