checkbox и radio в фильтре

--- a/catalog.html
+++ b/catalog.html
@@ -56,8 +56,10 @@
           <div class="price-range">
             <h3>Стоимость, &#8381;:</h3>
             <div class="input-group">
-              <label><input type="number" name="from" value="0" min="0" max="11500" step="1">от</label>
-              <label><input type="number" name="to" value="9000" min="0" max="11500" step="1">до</label>
+              <label class="price-from">
+                <input type="number" name="from" value="0" min="0" max="11500" step="1">от</label>
+              <label class="price-to">
+                <input type="number" name="to" value="9000" min="0" max="11500" step="1">до</label>
             </div>
             <div class="double-range"></div>
           </div>
